# bfg-api

./: .gitignore  HISTORY.md  README.md  check_server.txt  dump.txt  file_to_pbn.py  git-commits.txt  justfile  pyproject.toml  requirements.txt  requirements_core.txt
.gitA/: config  index  packed-refs
.gitA/logs/refs/remotes/origin/: HEAD
.gitA/objects/pack/: pack-0c46ed18f6ea98a22a251da154804b6949f71edf.idx  pack-0c46ed18f6ea98a22a251da154804b6949f71edf.pack  pack-0c46ed18f6ea98a22a251da154804b6949f71edf.rev
.gitA/refs/heads/: master
src/: dds.py  dump.txt  views.py
src/bfg_api/: apps.py  logging_setup.py  urls.py  views.py
src/common/: application.py  archive.py  bidding.py  bidding_box.py  board.py  cardplay.py  constants.py  contexts.py  images.py  logger.py  models.py  undo_cardplay.py  utilities.py
src/common/middleware/: cors.py
src/common/migrations/: 0001_initial.py  0002_bfguser.py  0003_delete_bfguser_alter_room_set_hands.py  0004_user.py  0005_delete_user_alter_room_display_hand_type_and_more.py  0006_alter_room_display_hand_type_alter_room_set_hands_and_more.py  0007_alter_room_display_hand_type_alter_room_set_hands_and_more.py  0008_alter_room_display_hand_type_alter_room_set_hands_and_more.py  0009_room_saved_boards.py  0010_alter_room_saved_boards.py  0011_alter_room_saved_boards.py  0012_room_saved_pbn.py  0013_user.py  0014_alter_user_last_activity.py
src/config/: cors.py  csrf.py  definitions.py  environ.py  logging.py  settings.py  urls.py  wsgi.py
src/locale/en_GB/LC_MESSAGES/: bfg.mo
src/pages/: urls.py
src/pages/templates/pages/: home.html
tests/: test_board.py  test_undo.py  test_undo_one_board.py  test_utilities.py
