[project]
name = "bfg_api"
version = "0.1.0"
description = "API access to Bid for Game"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "appdirs>=1.4.4",
    "asgiref>=3.10.0",
    "asttokens>=3.0.0",
    "backports-strenum >=1.3.1 ; python_version < '3.11'",
    "bfgbidding>=0.1.4",
    "bfgcardplay>=1.2.8",
    "bfgdealer>=0.0.26",
    "bridgeobjects>=0.1.30",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "colorama>=0.4.6",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "endplay>=0.5.12",
    "executing>=2.2.1",
    "fonttools>=4.60.1",
    "icecream>=2.1.8",
    "idna>=3.11",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "numpy>=2.2.6",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "psiutils>=0.2.14",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "ruff>=0.15.17",
    "six>=1.17.0",
    "sqlparse>=0.5.3",
    "structlog>=25.4.0",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
]
# pyproject.toml
[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
